--- a/css/_globals.scss
+++ b/css/_globals.scss
@@ -9,7 +9,7 @@
 
 html {
     font-size: $fontSize;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
