--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 
 html {
   font-size: 62.5%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -318,7 +318,6 @@ textarea:focus + .label-textarea::after {
 
 /* Header */
 header {
-  overflow: hidden;
   height: 10vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -382,7 +381,7 @@ header .nav-links a:not(:last-child) {
 @media (max-width: 759px) {
   header .nav-links {
     height: 50%;
-    width: 100%;
+    width: 90%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -394,28 +393,32 @@ header .nav-links a:not(:last-child) {
             align-items: center;
     position: absolute;
     top: 10vh;
+    right: 0;
     z-index: 3;
   }
   header .nav-links a {
-    font-size: 3rem;
+    font-size: 2rem;
     color: #fff;
   }
 }
 
 header .overlay {
   display: none;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 10vh;
+  right: 0;
+  background-color: #808080;
+  pointer-events: none;
 }
 
 @media (max-width: 759px) {
   header .overlay {
     display: block;
-    height: 100%;
-    width: 100%;
-    background-color: #808080;
-    position: absolute;
-    top: 10vh;
+    height: 90%;
+    width: 90%;
     z-index: 0;
-    pointer-events: none;
   }
 }
 
@@ -477,7 +480,7 @@ header .overlay {
 @media (max-width: 759px) {
   .footer-container {
     padding: 3rem 0;
-    height: 30vh;
+    height: 25vh;
   }
 }
 
@@ -513,6 +516,12 @@ footer .social a:not(:last-child) {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  footer .social a {
+    font-size: 3rem;
+  }
+  footer .social a:not(:last-child) {
+    margin-right: 2rem;
   }
 }
 
